--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -10,4 +10,12 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers/" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="../Business/Business.csproj" />
+  </ItemGroup>
+
 </Project>
